--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
 </head>
 <body>
     
-<h1> Badger and Bear </h1>
+<header class='header'>
+    Badger and Bear
+</header>
 
+<script type="text/javascript" src="./js/main.js"></script> <!-- the calls the required fuctions to reformat the data source and create the charts -->
 </body>
 </html>
