--- a/index.html
+++ b/index.html
@@ -14,11 +14,10 @@
     <title>Badger and Bear</title>
 </head>
 <body>
-    
-<header class='header'>
-    Badger and Bear
-</header>
+        
+    <header class='header'>
+    </header>
 
-<script type="text/javascript" src="./js/main.js"></script> <!-- the calls the required fuctions to reformat the data source and create the charts -->
+    <script type="text/javascript" src="./js/main.js"></script>
 </body>
 </html>
