animations on hero

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 
         <div class='text-box'>
             <h1 class='heading-primary'>
-                <span class='heading-primary-main'>Badger</span>
-                <span class='heading-primary-main'>and</span>
-                <span class='heading-primary-main'>Bear</span>
+                <span class='heading-primary-main heading-primary-main-1'>Badger</span>
+                <span class='heading-primary-main heading-primary-main-2'>and</span>
+                <span class='heading-primary-main heading-primary-main-3'>Bear</span>
                 <!-- <span class='heading-primary-sub'>TAGLINE??</span> -->
             </h1>
         </div>
