--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                 <span class='heading-primary-main heading-primary-main-1'>Badger</span>
                 <span class='heading-primary-main heading-primary-main-2'>and</span>
                 <span class='heading-primary-main heading-primary-main-3'>Bear</span>
-                <!-- <span class='heading-primary-sub'>TAGLINE??</span> -->
             </h1>
+            <a href='#' class='hero-btn btn btn-white'>Spark Joy Now</a>
         </div>
     </header> <!-- header -->
     <main>
