--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <span class='heading-primary-main heading-primary-main-2'>and</span>
                 <span class='heading-primary-main heading-primary-main-3'>Bear</span>
             </h1>
-            <a href='#' class='hero-btn btn btn-white'>Spark Joy Now</a>
+            <a href='#' class='hero-btn btn btn-white'>Spark Joy</a>
         </div>
     </header> <!-- header -->
     <main>
