--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         
     <header class='header'>
         <div class='logo-box'>
-            <img class='logo' src='../img/BB_hero.jpg' alt="logo">
+            <img class='logo' src='/img/BB_hero.jpg' alt="logo">
         </div>  <!-- logo box -->
 
         <div class='text-box'>
