added BEM classnames

--- a/index.html
+++ b/index.html
@@ -9,24 +9,24 @@
 
     <link rel="stylesheet" href="css/icon-font.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="shortcut icon" type="image/png" href="img/favicon.png">
+    <link rel="shortcut icon" type="image/png" href="/img/BB_hero.jpg">
     
     <title>Badger and Bear</title>
 </head>
 <body>
         
     <header class='header'>
-        <div class='logo-box'>
-            <img class='logo' src='/img/BB_hero.jpg' alt="logo">
+        <div class='header__logo-box'>
+            <img class='header__logo' src='/img/BB_hero.jpg' alt="logo">
         </div>  <!-- logo box -->
 
-        <div class='text-box'>
+        <div class='header__text-box'>
             <h1 class='heading-primary'>
-                <span class='heading-primary-main heading-primary-main-1'>Badger</span>
-                <span class='heading-primary-main heading-primary-main-2'>and</span>
-                <span class='heading-primary-main heading-primary-main-3'>Bear</span>
+                <span class='heading-primary--main heading-primary--main1'>Badger</span>
+                <span class='heading-primary--main heading-primary--main2'>and</span>
+                <span class='heading-primary--main heading-primary--main3'>Bear</span>
             </h1>
-            <a href='#' class='hero-btn btn btn-white'>Spark Joy</a>
+            <a href='#' class='btn--animated btn btn--white'>Spark Joy</a>
         </div>
     </header> <!-- header -->
     <main>
