about page grid layout, and more sass variable additions

--- a/index.html
+++ b/index.html
@@ -29,98 +29,47 @@
             <a href='#' class='btn--animated btn btn--white'>Spark Joy</a>
         </div> <!-- header__text-box -->
     </header> <!-- header -->
-
-    <section class='grid-test'>
-        <div class='row'>
-            <div class='col-1-of-2'>
-                Col 1 of 2
-            </div> <!-- col-1-of-2 -->
-            <div class='col-1-of-2'>
-                Col 1 of 2
-            </div> <!-- col-1-of-2 -->
-        </div> <!-- row -->
-
-        <div class='row'>
-            <div class='col-1-of-3'>
-                Col 1 of 3
-            </div> <!-- col-1-of-3 -->
-            <div class='col-1-of-3'>
-                Col 1 of 3
-            </div> <!-- col-1-of-3 -->
-            <div class='col-1-of-3'>
-                Col 1 of 3
-            </div> <!-- col-1-of-3 -->
-        </div> <!-- row -->
-
-        <div class='row'>
-            <div class='col-1-of-3'>
-                Col 1 of 3
-            </div> <!-- col-1-of-3 -->
-            <div class='col-2-of-3'>
-                Col 2 of 3
-            </div> <!-- col-2-of-3 -->
-        </div> <!-- row -->
-
-        <div class='row'>
-            <div class='col-3-of-3'>
-                Col 3 of 3
-            </div> <!-- col-3-of-3 -->
-        </div> <!-- row -->
-
-        <div class='row'>
-            <div class='col-1-of-4'>
-                Col 1 of 4
-            </div> <!-- col-1-of-4 -->
-            <div class='col-1-of-4'>
-                Col 1 of 4
-            </div> <!-- col-1-of-4 -->
-            <div class='col-1-of-4'>
-                Col 1 of 4
-            </div> <!-- col-1-of-4 -->
-            <div class='col-1-of-4'>
-                Col 1 of 4
-            </div> <!-- col-1-of-4 -->
-        </div> <!-- row -->
-
-        <div class='row'>
-            <div class='col-1-of-4'>
-                Col 1 of 4
-            </div> <!-- col-1-of-4 -->
-            <div class='col-1-of-4'>
-                Col 1 of 4
-            </div> <!-- col-1-of-4 -->
-            <div class='col-2-of-4'>
-                Col 2 of 4
-            </div> <!-- col-2-of-4 -->
-        </div> <!-- row -->
-        <div class='row'>
-            <div class='col-1-of-4'>
-                Col 1 of 4
-            </div> <!-- col-1-of-4 -->
-            <div class='col-1-of-4'>
-                Col 1 of 4
-            </div> <!-- col-1-of-4 -->
-            <div class='col-2-of-4'>
-                Col 2 of 4
-            </div> <!-- col-2-of-4 -->
-        </div> <!-- row -->
-
-        <div class='row'>
-            <div class='col-1-of-4'>
-                Col 1 of 4
-            </div> <!-- col-1-of-4 -->
-            <div class='col-3-of-4'>
-                Col 3 of 4
-            </div> <!-- col-3-of-4 -->
-        </div> <!-- row -->
-
-        <div class='row'>
-            <div class='col-4-of-4'>
-                Col 4 of 4
-            </div> <!-- col-4-of-4 -->
-        </div> <!-- row -->
-    </section> <!-- Grid test -->
-
+    <main>
+        <section class="section-about">
+            <div class="u-center-text u-margin-bottom-big">
+                <h2 class="heading-secondary">
+                    Colouring in the greys
+                </h2>
+            </div>
+            <div class='row'>
+                <div class='col-1-of-2'>
+                    <h3 class="heading-tertiary u-margin-bottom-small">
+                        thundercats lomo bushwick. Affogato pug hoodie trust fund.
+                    </h3>
+                    <p class="paragraph">
+                        Meh copper mug XOXO messenger bag godard. Sartorial plaid hashtag sustainable. Waistcoat poke VHS,
+                        try-hard intelligentsia biodiesel raclette organic lomo tumblr. Kitsch narwhal gastropub,
+                    </p>
+                    <h3 class="heading-tertiary u-margin-bottom-small">
+                        Before they sold out forage pitchfork tumeric blog
+                    </h3>
+                    <p class="paragraph">
+                        Af normcore blue bottle literally, tumblr franzen enamel pin offal tattooed.
+                        Vinyl seitan gluten-free flexitarian pitchfork forage bushwick cliche master cleanse godard.
+                    </p>
+                    <h3 class="heading-tertiary u-margin-bottom-small">
+                        I'm baby salvia keytar umami kinfolk pop-up snackwave
+                    </h3>
+                    <p class="paragraph">
+                        Franzen listicle craft beer, tousled disrupt yuccie celiac.
+                        Taxidermy readymade meggings scenester ramps schlitz mlkshk vexillologist tattooed.
+                    </p>
+                    <a href="#" class="btn-text">Learn more &rarr;</a>
+                </div> <!-- col-1-of-2 -->
+                <div class='col-1-of-2'>
+                    Images
+                </div> <!-- col-1-of-2 -->
+            </div> <!-- row -->
+        </section>
+    </main>
+    
+    <footer>
+    </footer>
     <script type="text/javascript" src="./js/main.js"></script>
 </body>
 </html>
