--- a/index.html
+++ b/index.html
@@ -62,7 +62,11 @@
                     <a href="#" class="btn-text">Learn more &rarr;</a>
                 </div> <!-- col-1-of-2 -->
                 <div class='col-1-of-2'>
-                    Images
+                    <div class="composition">
+                        <img src="img/about-1.jpg" alt="About Photo 1" class="composition__photo composition__photo--p1">
+                        <img src="img/about-2.jpg" alt="About Photo 2" class="composition__photo composition__photo--p2">
+                        <img src="img/about-3.jpg" alt="About Photo 3" class="composition__photo composition__photo--p3">
+                    </div>
                 </div> <!-- col-1-of-2 -->
             </div> <!-- row -->
         </section>
