--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
 
-    <link rel="stylesheet" href="css/icon-font.css">
+    <link rel="stylesheet" href="css/icon-font-basic.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" type="image/png" href="/img/BB_hero.jpg">
     
@@ -30,6 +30,7 @@
         </div> <!-- header__text-box -->
     </header> <!-- header -->
     <main>
+
         <section class="section-about">
             <div class="u-center-text u-margin-bottom-big">
                 <h2 class="heading-secondary">
@@ -69,7 +70,51 @@
                     </div>
                 </div> <!-- col-1-of-2 -->
             </div> <!-- row -->
-        </section>
+        </section> <!-- section-about -->
+
+        <section class="section-features">
+            <i class="icon-basic-heart"></i>
+            <div class="row">
+                <div class="col-1-of-4">
+                    <div class="feature-box">
+                        <i class="feature-box__icon icon-basic-heart"></i>
+                        <h3 class="heading-tertiary">Made with Love</h3>
+                        <p class="feature-box__text">Made with incredible attention to detail,
+                            care and love in every stitch, made to last,
+                            to be passed down, cherished, own designs, hand drawn applique,
+                            supporting local businesses, giving back, random acts of kindness</p>
+                    </div>
+                </div>
+                <div class="col-1-of-4">
+                    <div class="feature-box">
+                        <i class="feature-box__icon icon-basic-home"></i>
+                        <h3 class="heading-tertiary">Work from home Mum</h3>
+                        <p class="feature-box__text">know the rigours children put on clothes,
+                            the need for clothing to be better made, colours our children want to wear,
+                            sense of style, individualism, </p>
+                    </div>
+                </div>
+                <div class="col-1-of-4">
+                    <div class="feature-box">
+                        <i class="feature-box__icon icon-basic-female"></i>
+                        <h3 class="heading-tertiary">Girls & Mamas</h3>
+                        <p class="feature-box__text">I'm baby shaman live-edge brunch venmo, poutine heirloom slow-carb four dollar toast activated charcoal tote bag craft beer etsy hammock iceland. Authentic hot chicken seitan kale chips irony vice gastropub.
+                            Taxidermy unicorn pitchfork austin 3 wolf moon.
+                            Raw denim selvage neutra offal af whatever prism.</p>
+                    </div>
+                </div>
+                <div class="col-1-of-4">
+                    <div class="feature-box">
+                        <i class="feature-box__icon icon-basic-male"></i>
+                        <h3 class="heading-tertiary">Boys & Papas</h3>
+                        <p class="feature-box__text">Gluten-free craft beer VHS tousled, adaptogen knausgaard post-ironic venmo.
+                            Af fixie yr kogi coloring book palo santo cold-pressed banjo meditation kitsch.
+                            PBR&B vexillologist pour-over whatever prism poke thundercats iceland direct trade microdosing ethical letterpress bespoke.</p>
+                    </div>
+                </div>
+            </div>
+        </section> <!-- section-features -->
+
     </main>
     
     <footer>
