--- a/index.html
+++ b/index.html
@@ -31,6 +31,130 @@
     </header> <!-- header -->
     <main>
 
+        <section class="section-features">
+            <div class="row">
+                <div class="col-1-of-4">
+                    <div class="feature-box">
+                        <i class="feature-box__icon icon-basic-home"></i>
+                        <h3 class="heading-tertiary u-margin-bottom-small">Work from home Mum</h3>
+                        <p class="feature-box__text">know the rigours children put on clothes,
+                            the need for clothing to be better made, colours our children want to wear,
+                            sense of style, individualism, </p>
+                    </div>
+                </div>
+                <div class="col-1-of-4">
+                    <div class="feature-box">
+                        <i class="feature-box__icon icon-basic-heart"></i>
+                        <h3 class="heading-tertiary u-margin-bottom-small">Made with Love</h3>
+                        <p class="feature-box__text">Made with incredible attention to detail,
+                            care and love in every stitch, made to last,
+                            to be passed down, cherished, own designs, hand drawn applique,
+                            supporting local businesses, giving back, random acts of kindness</p>
+                    </div>
+                </div>
+                <div class="col-1-of-4">
+                    <div class="feature-box">
+                        <i class="feature-box__icon icon-basic-female"></i>
+                        <h3 class="heading-tertiary u-margin-bottom-small">Girls & Mamas</h3>
+                        <p class="feature-box__text">I'm baby shaman live-edge brunch venmo, poutine heirloom slow-carb four dollar toast activated charcoal tote bag craft beer etsy hammock iceland.</p>
+                    </div>
+                </div>
+                <div class="col-1-of-4">
+                    <div class="feature-box">
+                        <i class="feature-box__icon icon-basic-male"></i>
+                        <h3 class="heading-tertiary u-margin-bottom-small">Boys & Papas</h3>
+                        <p class="feature-box__text">Gluten-free craft beer VHS tousled, adaptogen knausgaard post-ironic venmo.
+                            Af fixie yr kogi coloring book palo santo cold-pressed banjo meditation kitsch.</p>
+                    </div>
+                </div>
+            </div>
+        </section> <!-- section-features -->
+
+        <section class='section-best'>
+            <div class="u-center-text u-margin-bottom-big">
+                <h2 class="heading-secondary">Best Selling</h2>
+            </div>
+
+            <div class='row'>
+                <div class='col-1-of-3'>
+                    <div class="card">
+                        <div class="card__side card__side--front card__side--front-1">
+                            <div class="card__picture card__picture--1">
+                                &nbsp;
+                            </div>
+                            <h4 class="card__heading">
+                                <span class="card__heading-span card__heading-span--1">
+                                Cubs
+                                </span>
+                            </h4>
+                            <div class="card__details">
+                                <ul>
+                                    <li>Babies</li>
+                                    <li>Toddlers</li>
+                                    <li>Boys</li>
+                                    <li>Girls</li>
+                                    <li>Dads</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="card__side card__side--back card__side--back-1">
+                            BACK
+                        </div>
+                    </div>
+                </div> <!-- col-1-of-3 -->
+                <div class='col-1-of-3'>
+                    <div class="card">
+                        <div class="card__side card__side--front card__side--front-2">
+                            <div class="card__picture card__picture--2">
+                                &nbsp;
+                            </div>
+                            <h4 class="card__heading">
+                                <span class="card__heading-span card__heading-span--2">
+                                    Mama
+                                </span>
+                            </h4>
+                            <div class="card__details">
+                                <ul>
+                                    <li>Pregnancy</li>
+                                    <li>Nursing</li>
+                                    <li>Matching</li>
+                                    <li>Coffee</li>
+                                    <li>Dancing</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="card__side card__side--back card__side--back-2">
+                            BACK
+                        </div>
+                    </div>
+                </div> <!-- col-1-of-3 -->
+                <div class='col-1-of-3'>
+                    <div class="card">
+                        <div class="card__side card__side--front card__side--front-3">
+                            <div class="card__picture card__picture--3">
+                                &nbsp;
+                            </div>
+                            <h4 class="card__heading">
+                                <span class="card__heading-span card__heading-span--3">
+                                    Subscriptions
+                                </span>
+                            </h4>
+                            <div class="card__details">
+                                <ul>
+                                    <li>Pants</li>
+                                    <li>Bras (TBC)</li>
+                                    <li>Hot Pants (Good Luck)</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="card__side card__side--back card__side--back-3">
+                            BACK
+                        </div>
+                    </div>
+                </div> <!-- col-1-of-3 -->
+            </div> <!-- row -->
+        </section> <!-- section-best -->
+
         <section class="section-about">
             <div class="u-center-text u-margin-bottom-big">
                 <h2 class="heading-secondary">
@@ -71,50 +195,6 @@
                 </div> <!-- col-1-of-2 -->
             </div> <!-- row -->
         </section> <!-- section-about -->
-
-        <section class="section-features">
-            <i class="icon-basic-heart"></i>
-            <div class="row">
-                <div class="col-1-of-4">
-                    <div class="feature-box">
-                        <i class="feature-box__icon icon-basic-heart"></i>
-                        <h3 class="heading-tertiary">Made with Love</h3>
-                        <p class="feature-box__text">Made with incredible attention to detail,
-                            care and love in every stitch, made to last,
-                            to be passed down, cherished, own designs, hand drawn applique,
-                            supporting local businesses, giving back, random acts of kindness</p>
-                    </div>
-                </div>
-                <div class="col-1-of-4">
-                    <div class="feature-box">
-                        <i class="feature-box__icon icon-basic-home"></i>
-                        <h3 class="heading-tertiary">Work from home Mum</h3>
-                        <p class="feature-box__text">know the rigours children put on clothes,
-                            the need for clothing to be better made, colours our children want to wear,
-                            sense of style, individualism, </p>
-                    </div>
-                </div>
-                <div class="col-1-of-4">
-                    <div class="feature-box">
-                        <i class="feature-box__icon icon-basic-female"></i>
-                        <h3 class="heading-tertiary">Girls & Mamas</h3>
-                        <p class="feature-box__text">I'm baby shaman live-edge brunch venmo, poutine heirloom slow-carb four dollar toast activated charcoal tote bag craft beer etsy hammock iceland. Authentic hot chicken seitan kale chips irony vice gastropub.
-                            Taxidermy unicorn pitchfork austin 3 wolf moon.
-                            Raw denim selvage neutra offal af whatever prism.</p>
-                    </div>
-                </div>
-                <div class="col-1-of-4">
-                    <div class="feature-box">
-                        <i class="feature-box__icon icon-basic-male"></i>
-                        <h3 class="heading-tertiary">Boys & Papas</h3>
-                        <p class="feature-box__text">Gluten-free craft beer VHS tousled, adaptogen knausgaard post-ironic venmo.
-                            Af fixie yr kogi coloring book palo santo cold-pressed banjo meditation kitsch.
-                            PBR&B vexillologist pour-over whatever prism poke thundercats iceland direct trade microdosing ethical letterpress bespoke.</p>
-                    </div>
-                </div>
-            </div>
-        </section> <!-- section-features -->
-
     </main>
     
     <footer>
