--- a/index.html
+++ b/index.html
@@ -98,7 +98,13 @@
                             </div>
                         </div>
                         <div class="card__side card__side--back card__side--back-1">
-                            BACK
+                            <div class="card__cta">
+                                <div class="card__price-box">
+                                    <p class="card__price-only">from</p>
+                                    <p class="card__price-value">£20</p>
+                                </div>
+                                <a href="#" class="btn btn--white">Show Me!</a>
+                            </div>
                         </div>
                     </div>
                 </div> <!-- col-1-of-3 -->
@@ -124,7 +130,13 @@
                             </div>
                         </div>
                         <div class="card__side card__side--back card__side--back-2">
-                            BACK
+                            <div class="card__cta">
+                                <div class="card__price-box">
+                                    <p class="card__price-only">from</p>
+                                    <p class="card__price-value">£40</p>
+                                </div>
+                                <a href="#" class="btn btn--white">Show Me!</a>
+                            </div>
                         </div>
                     </div>
                 </div> <!-- col-1-of-3 -->
@@ -148,11 +160,22 @@
                             </div>
                         </div>
                         <div class="card__side card__side--back card__side--back-3">
-                            BACK
+                            <div class="card__cta">
+                                <div class="card__price-box">
+                                    <p class="card__price-only">Monthly</p>
+                                    <p class="card__price-value">£7.50</p>
+                                </div>
+                                <a href="#" class="btn btn--white">YES!</a>
+                            </div>
                         </div>
                     </div>
                 </div> <!-- col-1-of-3 -->
             </div> <!-- row -->
+
+            <div class="u-center-text u-margin-top-huge">
+                <a href="#" class="btn btn--primary">I want to see everything!!</a>
+            </div>
+
         </section> <!-- section-best -->
 
         <section class="section-about">
