--- a/index.html
+++ b/index.html
@@ -218,6 +218,59 @@
                 </div> <!-- col-1-of-2 -->
             </div> <!-- row -->
         </section> <!-- section-about -->
+
+        <section class="section-stories">
+            <div class="u-center-text u-margin-bottom-big">
+                <h2 class="heading-secondary">
+                    We make people genuinely happy
+                </h2>
+            </div>
+            <div class="row">
+                <div class="story">
+                    <figure class="story__shape">
+                        <img src="img/story-01.jpg" alt="Nursing Top Purchase" class="story__img">
+                    <figcaption class="story__caption">Mary Smith</figcaption>
+                    </figure>
+                    <div class="story__text">
+                        <h3 class="heading-tertiary">I had the best experience buying clothing I ever had</h3>
+                        <p>
+                            Bitters woke pinterest, hell of franzen palo santo live-edge health goth. Meh scenester normcore, godard gluten-free 3 wolf moon fanny pack meditation kitsch lo-fi tbh.
+                        </p>
+                    </div>
+                </div> <!--story -->
+            </div> <!--row -->
+            <div class="row">
+                <div class="story">
+                    <figure class="story__shape">
+                        <img src="img/story-02.jpg" alt="Pants Subscriber" class="story__img">
+                    <figcaption class="story__caption">Mark Standen</figcaption>
+                    </figure>
+                    <div class="story__text">
+                        <h3 class="heading-tertiary">Bloody nice clothes, just waiting on my hot pants!</h3>
+                        <p>
+                            I'm baby artisan ethical knausgaard poke cardigan, vinyl post-ironic gastropub plaid squid portland. Health goth fixie 3 wolf moon direct trade photo booth, yr wayfarers scenester raw denim shaman tofu truffaut roof party sartorial franzen. Coloring book next level snackwave
+                        </p>
+                    </div>
+                </div> <!-- story -->
+            </div> <!-- row -->
+            <div class="row">
+                <div class="story">
+                    <figure class="story__shape">
+                        <img src="img/story-03.jpg" alt="Pants Subscriber" class="story__img">
+                    <figcaption class="story__caption">Jane Doe</figcaption>
+                    </figure>
+                    <div class="story__text">
+                        <h3 class="heading-tertiary">I love my B&B Pants</h3>
+                        <p>
+                            Kombucha DIY vape subway tile, iceland tacos tousled chicharrones blue bottle franzen post-ironic. Health goth venmo artisan pinterest, crucifix organic cold-pressed taxidermy whatever pop-up iPhone. VHS photo booth lomo, everyday carry slow-carb helvetica tousled tote bag taxidermy pinterest raw denim vegan hexagon.
+                        </p>
+                    </div>
+                </div> <!--story -->
+            </div> <!--row -->
+            <div class="u-center-text u-margin-top-huge">
+                <a href="#" class="btn btn-text">Show me all the reviews</a>
+            </div>
+        </section>
     </main>
     
     <footer>
