--- a/index.html
+++ b/index.html
@@ -220,7 +220,13 @@
         </section> <!-- section-about -->
 
         <section class="section-stories">
-            <div class="u-center-text u-margin-bottom-big">
+            <div class="bg-video">
+                <video class="bg-video__content" autoplay muted loop>
+                    <source src=img/story-splash.mp4 type='video/mp4'>
+                    Your browser is not supported
+                </video>
+            </div>
+            <div class="section-stories__content u-center-text u-margin-bottom-big">
                 <h2 class="heading-secondary">
                     We make people genuinely happy
                 </h2>
