--- a/index.html
+++ b/index.html
@@ -276,7 +276,29 @@
             <div class="u-center-text u-margin-top-huge">
                 <a href="#" class="btn btn-text">Show me all the reviews</a>
             </div>
-        </section>
+        </section> <!-- section-stories -->
+
+        <section class="section-book">
+            <div class="row">
+                <div class="book">
+                    <div class="book__form">
+                        <form action="#" class="form">
+                            <div class="u-margin-bottom-medium">
+                                <h2 class="heading-secondary">Order Now!</h2>
+                            </div>
+                            <div class="form__group">
+                                <input type="text" class="form__input" placeholer="Full Name" id="name" required>
+                                <label for="name" class="form__label">Full Name</label>
+                            </div>
+                            <div class="form__group">
+                                <input type="email" class="form__input" placeholer="Email Address" id="email" required>
+                                <label for="email" class="form__label">Email Address</label>
+                            </div>
+                        </form>
+                    </div> 
+                </div> <!-- book -->
+            </div> <!-- row -->
+        </section> <!-- section-book -->
     </main>
     
     <footer>
