--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
 
     <footer class="footer">
         <div class="footer__logo-box">
-            <img class="footer__logo" src="img/BB_hero.jpg" alt="Badger and Bear Logo">
+            <img class="footer__logo" srcset="img/bb-main--25pc.jpg 1x, img/bb-main--50pc.jpg 2x" alt="Badger and Bear Logo">
         </div>
         
         <div class="row">
