changed icon path

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <header class='header'>
         <div class='header__logo-box'>
-            <img class='header__logo' src='/img/BB_hero.jpg' alt="logo">
+            <img class='header__logo' src='img/bb-main--icon.jpg' alt="logo">
         </div>  <!-- header__logo-box -->
 
         <div class='header__text-box'>
